syntax = "proto3";
package pb;

message BenchRes{
    string message = 1;
}

message BenchReq{
    int64 len = 1;
}

service BenchMarkSvc {
    rpc ExecuteBenchMark (BenchReq) returns (BenchRes) {}
}